[package]
name = "ghoauth"
description = "Just enough Github client to OAuth."
authors = ["Christopher R. Miller <xpm@mysteriouspants.com>"]
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.6", optional = true, features = ["headers"] }
json = { version = "0", optional = true }
maud = { version = "0", optional = true }
port-selector = { version = "0.1", optional = true }
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1", features = ["derive"] }
thiserror = "1"
tokio = { version = "1", default-features = false, features = [
    "macros",
    "rt-multi-thread",
    "sync",
], optional = true }
tracing = { version = "0", optional = true }
tracing-subscriber = { version = "0", optional = true }
url = { version = "2", optional = true }

[dev-dependencies]
clap = {version = "4", features = ["derive"]}
tokio-test = { version = "0.4" }

[features]
default = ["fakehub"]
fakehub = [
    "dep:axum",
    "dep:json",
    "dep:maud",
    "dep:port-selector",
    "dep:tokio",
    "dep:tracing",
    "dep:tracing-subscriber",
    "dep:url",
]
